--- a/html/users/createUser.html
+++ b/html/users/createUser.html
@@ -36,15 +36,15 @@
 				>
 					<div>
 						<input type="checkbox" id="is-admin" name="is-admin">
-						<label for="isAdmin">Admin</label>
+						<label for="is-admin">Admin</label>
 					</div>
 					<div>
 						<input type="checkbox" id="mobile-user" name="mobile-user">
-						<label for="mobileUser">Mobile</label>
+						<label for="mobile-user">Mobile</label>
 					</div>
 					<div>
 						<input type="checkbox" id="web-user" name="web-user">
-						<label for="webUser">Web</label>
+						<label for="web-user">Web</label>
 					</div>
 				</div>
 				<input type="submit" class="w3-button action-button w3-light-green w3-hover-green" value="CreateUser">
