--- a/html/orders/orderDetails.html
+++ b/html/orders/orderDetails.html
@@ -1,1 +1,90 @@
-            
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Orders</title>
+    <link rel="stylesheet" type="text/css" href="../../css/main_content.css">
+</head>
+<body>
+<div id="sidenav" class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-left">
+    <img class="w3-bar-item" src="../../images/logo.jpg" alt="Logo">
+    <button id="close-button" type="button" class="w3-bar-item w3-button w3-large w3-hide-large" onclick="closeSidebar()">Close &times;</button>
+    <a class="w3-bar-item w3-button main-page" href="../../index.html"></a>
+    <a class="w3-bar-item w3-button users" href="../users/users.html"></a>
+    <a class="w3-bar-item w3-button orders active" href="orders.html"></a>
+    <a class="w3-bar-item w3-button storage" href="../storage/storage.html"></a>
+    <a class="w3-bar-item w3-button reports" href="../reports/createReport.html"></a>
+</div>
+
+
+<main class="w3-main">
+    <div class="w3-container w3-blue topbar">
+        <button id="open-button" type="button" class="w3-button w3-blue w3-xlarge w3-hide-large" onclick='openSidebar()' > &#9776; </button>
+    </div>
+
+    <header> <h1 id="header">Order №</h1> </header>
+    <section class="vertical-flex w3-left-align" style="padding: 3% 10%;">
+        <div>
+            <label for="order-status">Status</label>
+            <select id="order-status" class="full-wide w3-button" style="border: 1px solid #000000; text-align: left" disabled>
+                <option value="0">In progress</option>
+                <option value="1">Done</option>
+            </select>
+        </div>
+        <div>
+            <label for="order-customer">Customer</label>
+            <input class="full-wide" type="text" id="order-customer" disabled>
+        </div>
+        <div>
+            <label for="realization-time">Realization Time (YYYY-MM-DD)</label>
+            <input class="full-wide" type="text" id="realization-time" disabled>
+        </div>
+        <p>Materials</p>
+        <div class="collapsing-horizontal-flex">
+            <div class="item-column">
+                <div class="storage-item">
+                    <label for="value-org" class="item-header">ORG:</label>
+                    <input id="value-org" name="valueOrg" type="text" disabled>
+                </div>
+                <div class="storage-item">
+                    <label for="value-reg" class="item-header">REG:</label>
+                    <input id="value-reg" name="valueReg" type="text" disabled>
+                </div>
+                <div class="storage-item">
+                    <label for="value-tp" class="item-header">TP:</label>
+                    <input id="value-tp" name="valueTp" type="text" disabled>
+                </div>
+                <div class="storage-item">
+                    <label for="value-mix" class="item-header">MIX:</label>
+                    <input id="value-mix" name="valueMix" type="text" disabled>
+                </div>
+            </div>
+            <div class="item-column">
+                <div class="storage-item">
+                    <label for="value-80" class="item-header">80:</label>
+                    <input id="value-80" name="value80" type="text" disabled>
+                </div>
+                <div class="storage-item">
+                    <label for="value-100" class="item-header">100:</label>
+                    <input id="value-100" name="value100" type="text" disabled>
+                </div>
+                <div class="storage-item">
+                    <label for="value-150" class="item-header">150:</label>
+                    <input id="value-150" name="value150" type="text" disabled>
+                </div>
+                <div class="storage-item">
+                    <label for="value-200" class="item-header">200:</label>
+                    <input id="value-200" name="value200" type="text" disabled>
+                </div>
+            </div>
+        </div>
+        <label for="orderDetails">Details</label>
+        <textarea name="orderDetails" id="orderDetails" cols="30" rows="3" disabled></textarea>
+    </section>
+</main>
+
+<script type="text/javascript" src="../../js/show-hide_menu.js"></script>
+<script type="module" src="../../js/order_info.js"></script>
+
+</body>
